--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-02-28  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/gimpdialog.c: removed the call to
+	gtk_widget_get_toplevel() again.
+	Implement the GTK_DIALOG_DESTROY_WITH_PARENT behaviour in a way
+	that works for GimpDialog.
+
+	* app/gui/resolution-calibrate-dialog.c: pass the toplevel window
+	to gimp_dialog_new ().
+	
 2004-02-28  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpcellrendererviewable.c: some general cleanup.
