2004-03-01  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpfiledialog.[ch] (gimp_file_dialog_set_image):
	new function which configures the dialog to save an image.

	* app/gui/file-save-dialog.c: use it.

	* app/gui/file-open-dialog.c
	* app/gui/file-save-dialog.c: removed useless #inlcudes.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12489 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2004-03-01  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimpfiledialog.[ch] (gimp_file_dialog_set_image): 
+	new function which configures the dialog to save an image.
+
+	* app/gui/file-save-dialog.c: use it.
+
+	* app/gui/file-open-dialog.c
+	* app/gui/file-save-dialog.c: removed useless #inlcudes.
+
+2004-03-01  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/gimpfiledialog.[ch] (gimp_file_dialog_new): added
 	unused "GSList *file_procs" parameter.
 
