--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-01  Sven Neumann  <sven@gimp.org>
+
+	* app/config/test-config.c: added simple test for gimp_config_diff().
+
 2004-03-01  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpfiledialog.[ch] (gimp_file_dialog_set_uri):
