--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-01  Manish Singh  <yosh@gimp.org>
+
+	* configure.in: define a gimp_stable symbol based on the version
+	number (to complement gimp_unstable) and use it as a default for
+	--enable-default-binary.
+
 2004-03-01  Sven Neumann  <sven@gimp.org>
 
 	* app/config/test-config.c: added simple test for gimp_config_diff().
