2004-03-02  Pedro Gimeno  <pggimeno@wanadoo.es>
	* plug-ins/common/bumpmap.c (bumpmap): Fix handling of positive Y
	displacements of the bumpmap. Thanks to Joao S.O. Bueno for
	tracking this. Fixes bug #135866.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12494 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-02  Pedro Gimeno  <pggimeno@wanadoo.es>
+
+	* plug-ins/common/bumpmap.c (bumpmap): Fix handling of positive Y
+	displacements of the bumpmap. Thanks to Joao S.O. Bueno for
+	tracking this. Fixes bug #135866.
+
 2004-03-01  Manish Singh  <yosh@gimp.org>
 
 	* configure.in: define a gimp_stable symbol based on the version
