--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-02  Manish Singh  <yosh@gimp.org>
+
+	* plug-ins/pygimp/gimpfu.py: Disable PF_*ARRAY for now. Addresses
+	#122049.
+
 2004-03-02  Michael Natterer  <mitch@gimp.org>
 
 	* app/tools/gimpeditselectiontool.c
