2004-03-03  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimppreviewrendererimagefile.[ch]: moved the
	(disabled) ENABLE_FILE_SYSTEM_ICONS from the .c to the .h file and
	#ifdef the "gpointer file_system" member with it.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12500 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-03  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimppreviewrendererimagefile.[ch]: moved the
+	(disabled) ENABLE_FILE_SYSTEM_ICONS from the .c to the .h file and
+	#ifdef the "gpointer file_system" member with it.
+
 2004-03-03  Simon Budig  <simon@gimp.org>
 
 	* app/vectors/gimpvectors.c: fixed offset handling. Vectors
