--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-03  Michael Natterer  <mitch@gimp.org>
+
+	* libgimpthumb/tmpl/gimpthumb-utils.sgml: updated.
+
 2004-02-27  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/tmpl/gimpstock.sgml: added RTL variants of stock
