--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-03  Simon Budig  <simon@gimp.org>
+
+	* app/xcf/xcf-load.c: make the path-loading debug output conditional.
+
 2004-03-03  Sven Neumann  <sven@gimp.org>
 
 	* app/core/gimpimagefile.c (gimp_imagefile_get_new_preview):
