2004-03-03  Sven Neumann  <sven@gimp.org>
	* app/vectors/gimpvectors-import.c (gimp_vectors_import): better
	error reporting in case of a parser error.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12506 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-03  Sven Neumann  <sven@gimp.org>
+
+	* app/vectors/gimpvectors-import.c (gimp_vectors_import): better
+	error reporting in case of a parser error.
+
 2004-03-03  Simon Budig  <simon@gimp.org>
 
 	* app/xcf/xcf-load.c: make the path-loading debug output conditional.
