--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-03-04  Simon Budig  <simon@gimp.org>
+
+	* app/widgets/gimpimagedock.[ch]: #ifdef'ed the code for
+	the global shortcuts and disabled it.
+
+	Fixes bug #133453
+
 2004-03-03  Sven Neumann  <sven@gimp.org>
 
 	* app/vectors/gimpvectors-import.c (gimp_vectors_import): better
