--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-03-04  Simon Budig  <simon@gimp.org>
+
+	* plug-ins/common/animationplay.c: Display Frame numbers from
+	1 to n instead of 0 to n-1. Less confusing for the user.
+
+	Fixes bug #136124
+
 2004-03-04  Sven Neumann  <sven@gimp.org>
 
 	* Made 2.0pre4 release.
