--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-04  Sven Neumann  <sven@gimp.org>
+
+	* update.sh: s/gimp14/gimp20/
+
 2004-02-28  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation from
