--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-04  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpfiledialog.c (gimp_file_dialog_init): eek, the
+	separator crept back in while hacking GimpFileDialog. Removed it
+	again.
+
 2004-03-04  Simon Budig  <simon@gimp.org>
 
 	* plug-ins/common/animationplay.c: Display Frame numbers from
