2004-03-04  Sven Neumann  <sven@gimp.org>
	* Makefile.am: added a missing dependency that caused the
	gimp20-tips.pot not to be rebuild when gimp-tips.xml.in changes.

	* update.sh: s/gimp14/gimp20/


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12516 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,5 +1,8 @@
 2004-03-04  Sven Neumann  <sven@gimp.org>
 
+	* Makefile.am: added a missing dependency that caused the
+	gimp20-tips.pot not to be rebuild when gimp-tips.xml.in changes.
+
 	* update.sh: s/gimp14/gimp20/
 
 2004-02-28  Christophe Merlet  <redfox@redfoxcenter.org>
