added missing ChangeLog entry
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12517 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,11 @@
 	separator crept back in while hacking GimpFileDialog. Removed it
 	again.
 
+2004-03-04  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimpwidgets-utils.c (gimp_message_box): set the
+	window icon to the icon displayed in the message dialog.
+
 2004-03-04  Simon Budig  <simon@gimp.org>
 
 	* plug-ins/common/animationplay.c: Display Frame numbers from
