2004-03-04  Michael Natterer  <mitch@gimp.org>
	* app/core/gimptoolinfo.c: minor cleanup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12518 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-03-04  Michael Natterer  <mitch@gimp.org>
 
+	* app/core/gimptoolinfo.c: minor cleanup.
+
+2004-03-04  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/gimpfiledialog.c (gimp_file_dialog_init): eek, the
 	separator crept back in while hacking GimpFileDialog. Removed it
 	again.
