2004-03-04  Michael Natterer  <mitch@gimp.org>
	* app/config/gimpcoreconfig.[ch]
	* app/config/gimprc-blurbs.h: added boolean properties
	"global-brush", "global-pattern" etc.

	* app/gui/preferences-dialog.c: added GUI for them to the
	"Tool Options" page.

	* app/tools/tool_manager.c (tool_manager_tool_changed): honor the
	new prefs options when copying the new tool's properties.
	Fixed bug #122519.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12519 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,18 @@
 2004-03-04  Michael Natterer  <mitch@gimp.org>
 
+	* app/config/gimpcoreconfig.[ch]
+	* app/config/gimprc-blurbs.h: added boolean properties
+	"global-brush", "global-pattern" etc.
+
+	* app/gui/preferences-dialog.c: added GUI for them to the
+	"Tool Options" page.
+
+	* app/tools/tool_manager.c (tool_manager_tool_changed): honor the
+	new prefs options when copying the new tool's properties.
+	Fixed bug #122519.
+
+2004-03-04  Michael Natterer  <mitch@gimp.org>
+
 	* app/core/gimptoolinfo.c: minor cleanup.
 
 2004-03-04  Michael Natterer  <mitch@gimp.org>
