2004-03-04  Sven Neumann  <sven@gimp.org>
	* autogen.sh: follow the changes done for other modules such as
	glib, pango and gtk+:

	- exit with $? instead of 1 in case of failure
	- exit with $? if ./configure failed
	- removed --enable-gtk-doc option
	- added $AUTOGEN_CONFIGURE_ARGS

	* HACKING: document the new behaviour.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12520 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2004-03-04  Sven Neumann  <sven@gimp.org>
+
+	* autogen.sh: follow the changes done for other modules such as
+	glib, pango and gtk+:
+
+	- exit with $? instead of 1 in case of failure
+	- exit with $? if ./configure failed
+	- removed --enable-gtk-doc option
+	- added $AUTOGEN_CONFIGURE_ARGS
+
+	* HACKING: document the new behaviour.
+
 2004-03-04  Michael Natterer  <mitch@gimp.org>
 
 	* app/config/gimpcoreconfig.[ch]
