2004-03-04  Simon Budig  <simon@gimp.org>
	* app/gui/preferences-dialog.c: remove the widgets for
	global-font and global-palette, since these are no options
	for multiple tools and have no visible effect for the user.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12521 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-04  Simon Budig  <simon@gimp.org>
+
+	* app/gui/preferences-dialog.c: remove the widgets for
+	global-font and global-palette, since these are no options
+	for multiple tools and have no visible effect for the user.
+
 2004-03-04  Sven Neumann  <sven@gimp.org>
 
 	* autogen.sh: follow the changes done for other modules such as
