2004-03-04  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/libgimpwidgets-sections.txt
	* libgimpwidgets/tmpl/gimpstock.sgml: updated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12525 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-04  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/libgimpwidgets-sections.txt
+	* libgimpwidgets/tmpl/gimpstock.sgml: updated.
+
 2004-03-03  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpthumb/tmpl/gimpthumb-utils.sgml: updated.
